test/corpus/import.txt
===
basic import
===

open test

---

(file
  (import_decl
    (long_identifier (identifier))))

===
basic import long identifier
===

open Mod.Test

---

(file
  (import_decl
    (long_identifier (identifier) (identifier))))

===
open type
===

open type System.Math

---

(file
  (import_decl
    (long_identifier (identifier) (identifier))))
